`setup` task now works